Integrate Guice to FXML and fix current warnings